# Zamba2

./: README.md  attention.py  config.json  enums.py  hf_utils.py  hf_utils_old.py  mamba2_layer.py  mamba_block.py  mamba_config.py  mamba_layer.py  mamba_model.py  mlp.py  pyproject.toml  requirements.txt  rotary.py  selective_scan_interface.py  setup.py  switch_mlp.py  test.py  utils.py
ops/: selective_scan_interface.py
ops/triton/: ssd_chunk_scan.py  ssd_chunk_state.py  ssd_combined.py
